Added button to flip image in grading console ..
On button click, a request is sent to flip the current scan.
The request is queued => examiner comes back later to grade it

--- a/config/gutenberg.yml
+++ b/config/gutenberg.yml
@@ -6,6 +6,7 @@ operations : &tasks
   annotate_scan : http://gutenberg/blocs/annotateScan
   generate_suggestion_form : http://gutenberg/blocs/generateSuggestionForm
   generate_student_roster : http://gutenberg/blocs/generateStudentRoster
+  rotate_scan : http://gutenberg/blocs/rotateScan
 
 development : &non_production_settings
   axis2 : http://localhost:8080/axis2/services/documentMaster
