[stop-gap]: First commit of changes to enable YAML-driven behaviour configuration ..
Basically, the plan is to use a YAML file to define all that happens when
a certain link is clicked

The YAML is then used to write the HAML - in particular the data-* attributes -
on <a>. These are then read on the client side by the JS and core/trigger.js
hides / unhides panels, issues AJAX requests etc. accordingly

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -1,11 +1,16 @@
 
 lnk-existing-quiz :
-  lp : lp-worksheet-builder 
-  wp : preview
-  autoclick : tab-wsb-quizzes 
+  left : 
+    show : left-1
+  wide : 
+    show : wide-X 
+  default-lnk : true
 
-lnk-wsb-sektions :
+tab-wsb-quizzes :
   toggle : tab
-  autoclick : sektions-tab
-  attach : sektions-tab
-  wp : notouch
+  ajax : quizzes/list
+  panel-ajax : quiz/preview?id=:id
+
+tab-wsb-sektions :
+  toggle : tab
+    
