tab-qzb-questions' actions mapped

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -40,3 +40,8 @@ tab-qzb-verticals :
 
 tab-qzb-topics : 
   toggle : tab
+
+tab-qzb-questions :
+  toggle : tab
+  panel : 
+    ajax : question/preview?id=:id
