Allow specifiying of AJAX url on which menu-update happens
1. (onclick.yml) Add a 'update-on' clause to an <a> with requisite placeholders (:a, :b, :c etc)
2. (toolbox) Add the target menu within #toolbox
3. (RABL) Send :a, :b, :c etc with the JSON

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -18,12 +18,20 @@ tab-wsb-sektions :
   toggle : tab
     
 lnk-wsb-new :
-  left :
-    show : left-1
-  wide :
-    show : wide-X
+  left : as-is
+  wide : as-is
   autoclick :
     tab : tab-wsb-sektions
+
+lnk-wsb-existing :
+  left : as-is
+  wide : as-is
+  update-on : quiz/preview
+
+lnk-download-solution :
+  left : as-is 
+  wide : as-is 
+  update-on : quiz/preview
 
 lnk-new-quiz :
   autoclick : 
