[student]: Groundwork laid for showing feedback in student console

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -113,3 +113,8 @@ tab-st-quizzes :
   url : student/testpapers
   panel :
     ajax : ws-preview.json?id=:id 
+
+tab-st-feedback :
+  toggle : tab
+  url : student/feedback.json?id=:prev
+  prev : tab-st-quizzes
