New concept: trapdoors
Trapdoors are links within dropdown-menus that - in turn - are rendered
solely within #toolbox (so that they are hidden)

The sole purpose of a trapdoor is to initiate ajax requests, hiding/unhiding
of panels etc. without being visible itself

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -95,6 +95,28 @@ m-account :
   toggle : dropdown
   menu : tasks-on-account
 
+lnk-ws-performance :
+  left : 
+    show : left-3
+  wide :
+    show : as-is
+  autoclick :
+    tab : tab-wsl
+
+tab-ws-performance :
+  toggle : tab
+  panel : 
+    ajax : student/performance.json?id=:id&ws=:prev 
+  url : performance/ws.json?id=:prev 
+  prev : tab-wsl
+  autoclick :
+    link : trapdoor-show-chart
+
+trapdoor-show-chart :
+  left : as-is
+  wide : 
+    show : graph-paper
+
 ##############################################################################
 ## Students 
 ##############################################################################
