--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -8,7 +8,7 @@ lnk-change-password :
 
 lnk-existing-quiz :
   left : 
-    show : left-1
+    show : left-4
   wide : 
     show : wide-X 
   default-lnk : true
@@ -140,3 +140,24 @@ tab-st-feedback :
   toggle : tab
   url : student/feedback.json?id=:prev
   prev : tab-st-quizzes
+
+
+##############################################################################
+## Shared between Teachers, Examiners and Admin
+##############################################################################
+
+tab-honest :
+  toggle : tab
+  url : feedback.json?type=honest
+
+tab-cogent :
+  toggle : tab
+  url : feedback.json?type=cogent
+
+tab-complete :
+  toggle : tab
+  url : feedback.json?type=complete
+
+tab-other :
+  toggle : tab
+  url : feedback.json?type=other
