--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -131,12 +131,12 @@ tab-grd-ws :
   toggle : tab
   url : ws/pending
   panel :
-    url : pages/pending.json?id=:prev
+    url : pages/pending.json?id=:id
 
 tab-grd-page :
   toggle : tab
   panel :
-    url : gr/pending.json?id=:prev
+    url : gr/pending.json?id=:id&ws=:prev
 
 tab-grd-panel :
   toggle : tab
