Query for pending pages moved from Quiz to Account

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -60,7 +60,7 @@ lnk-download-solution :
   left : as-is 
   wide : as-is 
   url : disabled 
-  update-on : quiz/preview
+  update-on : quiz/preview pages/pending
 
 lnk-new-quiz :
   autoclick : 
