[Very important]: Buttressed logic for updating menus on ajax-success
ajaxSuccess and ajaxComplete were not working as expected.
But it seems that the cleaner way of doing it anyways is to attach
a callback function to the $.get call

$.get is now called from within a wrapper - karo.ajaxCall(url, callback = karo.nothing)

onclick.yml -> To set the href only and not issue an AJAX call for a link, do the following:
  ajax : disabled
  url : whatever ( or specify in HAML and not here )

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -53,13 +53,13 @@ tab-wsl-quizzes :
 lnk-ws-download :
   left : as-is
   wide : as-is
-  url : disabled
+  ajax : disabled
   update-on : testpaper/load
 
 lnk-download-solution :
   left : as-is 
   wide : as-is 
-  url : disabled 
+  ajax : disabled
   update-on : quiz/preview pages/pending
 
 lnk-new-quiz :
@@ -170,6 +170,31 @@ tab-st-feedback :
   url : student/feedback.json?id=:prev
   prev : tab-st-quizzes
 
+##############################################################################
+## Admin / Examiner specific  
+##############################################################################
+
+m-admin-wb :
+  toggle : dropdown 
+  menu : admin-wb
+
+m-admin-schools :
+  toggle : dropdown 
+  menu : admin-schools 
+
+lnk-admin-courses :
+
+lnk-wb-blockdb :
+  left : as-is
+  wide : as-is
+  middle : as-is
+  right : as-is
+  url : examiner/block_db_slots.json?id=:id
+  id : control-panel
+
+m-examiner-wb :
+  toggle : dropdown 
+  menu : examiner-wb
 
 ##############################################################################
 ## Shared between Teachers, Examiners and Admin
