--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -187,6 +187,8 @@ lnk-admin-courses :
 lnk-wb-schools :
   left :
     show : left-1
+  wide :
+    show : wide-1
   url : schools/list
 
 lnk-wb-blockdb :
@@ -201,6 +203,20 @@ m-examiner-wb :
   toggle : dropdown 
   menu : examiner-wb
 
+tab-new-school :
+  toggle : tab
+
+tab-selected-school :
+  toggle : tab
+
+tab-school-general :
+  toggle : tab
+
+tab-school-faculty :
+  toggle : tab
+
+tab-school-sektions :
+  toggle : tab
 ##############################################################################
 ## Shared between Teachers, Examiners and Admin
 ##############################################################################
