[testpapers]: New action - ws/layout - added
This returns a renderable (as .tabs-left ) JSON representing the
layout of the parent quiz

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -147,6 +147,9 @@ tab-teacher-rc-1 :
 
 tab-teacher-rc-2 :
   toggle : tab
+  panel :
+    url : ws/layout.json?id=:prev
+  prev : tab-teacher-rc-1
 
 tab-teacher-rc-3 :
   toggle : tab
