Worksheet layout (ws/layout) must return student specific JSON
The old JSON - which captured subpart ID - wouldn't work without
other information about which worksheet and which student we are
seeking information for

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -148,7 +148,7 @@ tab-teacher-rc-1 :
 tab-teacher-rc-2 :
   toggle : tab
   panel :
-    url : ws/layout.json?id=:prev
+    url : ws/layout.json?ws=:prev&id=:id
   prev : tab-teacher-rc-1
   autoclick :
     tab : tab-teacher-rc-3
