[notification]: First attempt at standardizing interface for showing AJAX responses
Got a bell in the control panel that drops down to show messages from the server
The bell is fixed.
The JSON expected is fixed

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -271,3 +271,7 @@ lnk-logout :
 m-downloads : 
   menu : user-downloads
   toggle : dropdown
+
+m-notifications :
+  menu : notifications
+  toggle : dropdown
