[student]: Minor bug fixes + #wide-wait added in initial view

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -180,7 +180,7 @@ lnk-st-trigger :
   left : 
     show : left-1
   wide :
-    show : wide-X
+    show : wide-wait
   default-lnk : true
 
 tab-st-rc-1 :
