--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -174,6 +174,16 @@ lnk-tc-rc :
   autoclick :
     tab : tab-tc-rc-1
 
+lnk-ws-publish :
+  notouch: true
+  url : ws/publish.json?id=:id
+  id : tab-wsb-existing
+
+lnk-ws-unpublish :
+  notouch: true
+  url : ws/unpublish.json?id=:id
+  id : tab-wsb-existing
+
 ##############################################################################
 ## Students 
 ##############################################################################
@@ -187,6 +197,13 @@ lnk-st-rc :
     show : wide-wait
   default-lnk : true
 
+lnk-st-inbox :
+  autoclick :
+    tab : tab-st-inbox
+  left : as-is
+  middle : 
+    show : middle-1
+
 tab-st-rc-1 :
   toggle : tab
   url : ws/list 
@@ -199,6 +216,22 @@ tab-st-rc-1 :
 tab-st-rc-2 :
   toggle : tab
   prev : tab-st-rc-1
+
+tab-st-inbox :
+  toggle : tab
+  url : inbox.json?id=:prev
+  prev : control-panel
+  panel :
+    url : inbox/echo.json?ws=:id
+
+tab-st-outbox :
+  toggle : tab
+  url : outbox
+
+lnk-inbox-download :
+  notouch: true
+  ajax: disabled
+  update-on : inbox/echo
 
 ##############################################################################
 ## Admin / Examiner specific  
