Moved inbox to left-panel
Would stay consistent and show worksheet previews for inboxed worksheets
in the wide-panel

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -200,9 +200,10 @@ lnk-st-rc :
 lnk-st-inbox :
   autoclick :
     tab : tab-st-inbox
-  left : as-is
-  middle : 
-    show : middle-1
+  left : 
+    show : left-2 
+  wide :
+    show : wide-wait
 
 tab-st-rc-1 :
   toggle : tab
