--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -6,14 +6,21 @@
 lnk-change-password :
   toggle : modal
 
-lnk-existing-quiz :
+lnk-9-quizzes : &type001
   left : 
     show : left-1
   wide : 
     show : wide-X 
+
+lnk-10-quizzes : *type001
+lnk-11-quizzes : *type001
+lnk-12-quizzes : *type001
+
+lnk-existing-quiz :
   default-lnk : true
   autoclick :
     tab : tab-wsb-quizzes
+  << : *type001
 
 tab-wsb-quizzes :
   toggle : tab
