Stop-gap commit while I move to a different branch

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -242,6 +242,10 @@ lnk-inbox-download :
   update-on : inbox/echo
 
 ##############################################################################
+## Admin Only 
+##############################################################################
+
+##############################################################################
 ## Admin / Examiner specific  
 ##############################################################################
 
