Modal for editing account details added ..
The following remain to be done:
  1. Close the modal on form submission
  2. Ring the bell with JSON response

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -3,8 +3,9 @@
 ## Teachers 
 ##############################################################################
 
-lnk-change-password :
+lnk-edit-account :
   toggle : modal
+  notouch : true
 
 lnk-9-quizzes : &type001
   left : 
