State the 'context' in which sektion/students is called ...
New info used in JS to determine the where to write the student list

In fact, 'context' should be specified for any AJAX call that can
be made in - well - different contexts

It is returned as-is by the controller

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -213,7 +213,7 @@ tab-dive-1 :
   toggle : tab
   url : teacher/sektions
   panel : 
-    url : sektion/students.json?id=:id
+    url : sektion/students.json?id=:id&context=deepdive
   autoclick : 
     tab : tab-dive-2
 
