[deep-dive]: Don't allow click on 'by student' tab if sektion not selected

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -221,6 +221,12 @@ tab-dive-2 :
   toggle : tab
   prev : tab-dive-1
 
+tab-dive-3 : 
+  toggle : tab
+  prev : tab-dive-1
+  panel :
+    url : overall/proficiency.json?id=:id
+
 deepdive-* : 
   toggle : tab
   url : vertical/topics?id=:id
