Corrected minor error in last commit

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -8,10 +8,6 @@ lnk-edit-account :
   notouch : true
 
 #lnk-9-quizzes : &type001
-#  left : 
-#    show : left-1
-#  wide : 
-#    show : wide-X 
 #
 #lnk-10-quizzes : *type001
 #lnk-11-quizzes : *type001
@@ -21,7 +17,10 @@ lnk-existing-quiz :
   default-lnk : true
   autoclick :
     tab : tab-wsb-quizzes
-  << : *type001
+  left : 
+    show : left-1
+  wide : 
+    show : wide-X 
 
 tab-wsb-quizzes :
   toggle : tab
